RESOLVED FIXED121683
Fix a couple more CSS leaks
https://bugs.webkit.org/show_bug.cgi?id=121683
Summary Fix a couple more CSS leaks
Darin Adler
Reported 2013-09-20 07:53:09 PDT
Fix a couple more CSS leaks
Attachments
Patch (8.10 KB, patch)
2013-09-20 07:54 PDT, Darin Adler
no flags
Patch (8.10 KB, patch)
2013-09-20 08:04 PDT, Darin Adler
no flags
Patch (2.46 KB, patch)
2013-09-20 09:13 PDT, Darin Adler
no flags
Darin Adler
Comment 1 2013-09-20 07:54:58 PDT
EFL EWS Bot
Comment 2 2013-09-20 07:59:26 PDT
EFL EWS Bot
Comment 3 2013-09-20 07:59:48 PDT
Early Warning System Bot
Comment 4 2013-09-20 08:00:16 PDT
Early Warning System Bot
Comment 5 2013-09-20 08:00:31 PDT
Darin Adler
Comment 6 2013-09-20 08:04:26 PDT
Alexey Proskuryakov
Comment 7 2013-09-20 08:47:42 PDT
Comment on attachment 212166 [details] Patch EWS starts to think no: Unexpected flakiness: timeouts (2) fast/css/dumpAsText/xml-stylesheet-pi-not-in-prolog.xml [ Crash Timeout Pass ] svg/hixie/error/dumpAsText/004.xml [ Crash Timeout Pass ] Regressions: Unexpected crashes (18) fast/encoding/dumpAsText/utf-16-no-bom.xml [ Crash ] fast/frames/viewsource-attribute.html [ Crash ] fast/frames/viewsource-empty-attribute-value.html [ Crash ] fast/frames/viewsource-linebreak.html [ Crash ] fast/frames/viewsource-link-on-href-value.html [ Crash ] fast/frames/viewsource-on-image-file.html [ Crash ] fast/frames/viewsource-plain-text-tags.html [ Crash ] fast/frames/viewsource-unfinished-tags.html [ Crash ] fast/frames/viewsource-xml.html [ Crash ] http/tests/security/view-source-no-javascript-url.html [ Crash ] http/tests/security/view-source-no-refresh.html [ Crash ] http/tests/xmlviewer/dumpAsText/existing-tree-element-crash.xml [ Crash ] http/tests/xmlviewer/dumpAsText/xlink.xml [ Crash ] http/tests/xmlviewer/dumpAsText/xmlviewer-charset-cp1251.xml [ Crash ] http/tests/xmlviewer/dumpAsText/xmlviewer-charset-utf8.xml [ Crash ] http/tests/xmlviewer/dumpAsText/xmlviewer.xml [ Crash ] http/tests/xmlviewer/dumpAsText/xul.xml [ Crash ] svg/hixie/error/dumpAsText/005.xml [ Crash ]
Darin Adler
Comment 8 2013-09-20 09:09:12 PDT
Checking into the crashes now.
Darin Adler
Comment 9 2013-09-20 09:13:57 PDT
Darin Adler
Comment 10 2013-09-20 09:14:26 PDT
I uploaded this new patch while I am testing it locally to give the bots a chance to get a crack at it too.
Alexey Proskuryakov
Comment 11 2013-09-20 10:10:58 PDT
Comment on attachment 212179 [details] Patch EWS is happy, and so am I.
WebKit Commit Bot
Comment 12 2013-09-20 10:17:08 PDT
Comment on attachment 212179 [details] Patch Clearing flags on attachment: 212179 Committed r156178: <http://trac.webkit.org/changeset/156178>
WebKit Commit Bot
Comment 13 2013-09-20 10:17:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.