Fix a couple more CSS leaks https://bugs.webkit.org/show_bug.cgi?id=121683

Reviewed by Alexey Proskuryakov.

* css/CSSDefaultStyleSheets.cpp:
(WebCore::CSSDefaultStyleSheets::viewSourceStyle): Put the result of the
parseUASheet into a global variable so it doesn't show up as a storage leak.

* css/CSSGrammar.y.in: Added a missing adoptRef. This was leaking any rule
we parsed individually.


Canonical link: https://commits.webkit.org/139693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156178 268f45cc-cd09-0410-ab3c-d52691b4dbfc